<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="io.github.dearzack.diycode.addtopic.AddTopicActivity">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/select_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:drawableEnd="@drawable/ic_right_grey_24dp"
        android:padding="@dimen/common_margin"
        android:text="@string/add_topic_select_type"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:hint="@string/add_news_input_title"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/add_news_input_title"
        app:met_floatingLabelTextColor="@color/colorPrimary" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:hint="@string/add_topic_content"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/add_topic_content"
        app:met_floatingLabelTextColor="@color/colorPrimary" />
</LinearLayout>
